--- a/compiled.html
+++ b/compiled.html
@@ -1,5 +1,6 @@
-// html page
 <!doctype html>
+
+<!-- HTML PAGE -->
 
 <html>
 
@@ -74,6 +75,7 @@
             }
         }
 		*/
+		
 		console.log(lat[1] + "," + lon[2]);
 		for(var i = 0; i < id.length; i++) {
 			    var latLng = new google.maps.LatLng(lat[i], lon[i]);
