--- a/compiled.html
+++ b/compiled.html
@@ -55,8 +55,8 @@
 
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 2,
-                center: new google.maps.LatLng(2.8, -187.3),
+                zoom: 12,
+                center: new google.maps.LatLng(43.6659953, -79.374826),
                 mapTypeId: 'terrain'
             });
 
@@ -83,7 +83,7 @@
             }
         }
 		*/
-		var myTimer = window.setTimeout(function() {
+		var myTimer = window.setInterval(function() {
 			console.log(data);
 			for(var i = 0; i < id.length; i++) {
 			    var latLng = new google.maps.LatLng(lat[i], lon[i]);
@@ -92,7 +92,7 @@
                     map: map
                 });
 			}
-		}, 5000);
+		}, 10000);
 
 		
     </script>
